feat: Implement Sharesight as a new price data source with dedicated service, provider, and UI for configuration.

--- a/Mineplex.FinPlanner.Api/appsettings.json
+++ b/Mineplex.FinPlanner.Api/appsettings.json
@@ -5,6 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "PriceSources": {
+    "VanguardAu": {
+      "BaseUrl": "https://www.vanguard.com.au"
+    }
+  },
+  "Sharesight": {
+    "Username": "",
+    "Password": ""
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=FinPlanner;Username=finplanner;Password=Police-Game-Sublet1-Botanist"
